--- a/Teams/TeamsApp/Views/Shared/_PlayerItem.cshtml
+++ b/Teams/TeamsApp/Views/Shared/_PlayerItem.cshtml
@@ -13,9 +13,8 @@
         </div>
         <div>
             <span class="input-group-addon">DateOfBirth</span>
-            @Html.TextBox("model.PlayerViewModel.DateOfBirth", null, new { @class = "form-control", style = "width:200px;" })
-            <script src="@Url.Content("~/Scripts/jquery.ui.datepicker.min.js")"
-                    type="text/javascript"></script>
+            <br/>
+            <input type="date" "model.PlayerViewModel.DateOfBirth" style="width: 200px; height: 33.5px;  border: 1px solid #ced4da;" />
 
         </div>
         <div>
